--- a/IB_Client/src/ib_client/FXMLLogin.fxml
+++ b/IB_Client/src/ib_client/FXMLLogin.fxml
@@ -10,7 +10,7 @@
 <Pane fx:id="pane" maxHeight="252.0" minHeight="88.0" minWidth="400.0" prefHeight="100.0" prefWidth="400.0" style="-fx-background-color: GREY;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ib_client.FXMLLoginController">
    <children>
       <Button fx:id="buttonNotGivenAccount" layoutX="127.0" layoutY="64.0" mnemonicParsing="false" onAction="#rolloutAnchorPane" prefHeight="25.0" prefWidth="180.0" text="Dit ben ik niet" />
-      <Label fx:id="labelWelcomeText" layoutX="131.0" layoutY="6.0" text="Hallo Michiel van Eijkeren!" />
+      <Label fx:id="labelWelcomeText" layoutX="131.0" layoutY="6.0" />
       <Label alignment="CENTER_RIGHT" layoutX="37.0" layoutY="113.0" prefHeight="17.0" prefWidth="66.0" text="Naam:" />
       <TextField fx:id="textFieldPasswordGivenAccount" layoutX="127.0" layoutY="32.0" prefHeight="25.0" prefWidth="180.0" />
       <Label layoutX="25.0" layoutY="36.0" prefHeight="17.0" prefWidth="72.0" text="Wachtwoord:" />
@@ -19,8 +19,8 @@
       <TextField fx:id="textFieldAccountName" layoutX="126.0" layoutY="109.0" prefWidth="180.0" />
       <TextField fx:id="textFieldAccountResidence" layoutX="126.0" layoutY="145.0" prefWidth="180.0" />
       <TextField fx:id="textFieldAccountPassword" layoutX="126.0" layoutY="180.0" prefWidth="180.0" />
-      <Button fx:id="buttonLoginNew" layoutX="127.0" layoutY="214.0" mnemonicParsing="false" onAction="#rolloutAnchorPane" prefHeight="25.0" prefWidth="72.0" text="Login" />
-      <Button fx:id="buttonRegisterNew" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#rolloutAnchorPane" prefHeight="25.0" prefWidth="72.0" text="Registreer" />
-      <Button fx:id="buttonLoginGivenAccount" layoutX="314.0" layoutY="32.0" mnemonicParsing="false" onAction="#rolloutAnchorPane" prefHeight="58.0" prefWidth="72.0" text="Login" />
+      <Button fx:id="buttonLoginNew" layoutX="127.0" layoutY="214.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="72.0" text="Login" />
+      <Button fx:id="buttonRegisterNew" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#openRegisterScreen" prefHeight="25.0" prefWidth="72.0" text="Registreer" />
+      <Button fx:id="buttonLoginGivenAccount" layoutX="314.0" layoutY="32.0" mnemonicParsing="false" onAction="#loginGivenAccount" prefHeight="58.0" prefWidth="72.0" text="Login" />
    </children>
 </Pane>
