--- a/IB_Client/src/ib_client/FXMLLogin.fxml
+++ b/IB_Client/src/ib_client/FXMLLogin.fxml
@@ -19,8 +19,8 @@
       <TextField fx:id="textFieldAccountName" layoutX="126.0" layoutY="109.0" prefWidth="180.0" />
       <TextField fx:id="textFieldAccountResidence" layoutX="126.0" layoutY="145.0" prefWidth="180.0" />
       <TextField fx:id="textFieldAccountPassword" layoutX="126.0" layoutY="180.0" prefWidth="180.0" />
-      <Button fx:id="buttonLoginNew" layoutX="127.0" layoutY="214.0" mnemonicParsing="false" onAction="#login" prefHeight="25.0" prefWidth="72.0" text="Login" />
-      <Button fx:id="buttonRegisterNew" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#openRegisterScreen" prefHeight="25.0" prefWidth="72.0" text="Registreer" />
-      <Button fx:id="buttonLoginGivenAccount" layoutX="314.0" layoutY="32.0" mnemonicParsing="false" onAction="#loginGivenAccount" prefHeight="58.0" prefWidth="72.0" text="Login" />
+      <Button fx:id="buttonLoginNew" layoutX="127.0" layoutY="214.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="25.0" prefWidth="72.0" text="Login" />
+      <Button fx:id="buttonRegisterNew" layoutX="232.0" layoutY="214.0" mnemonicParsing="false" onAction="#RegisterAccount" prefHeight="25.0" prefWidth="72.0" text="Registreer" />
+      <Button fx:id="buttonLoginGivenAccount" layoutX="314.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleLoginButton" prefHeight="58.0" prefWidth="72.0" text="Login" />
    </children>
 </Pane>
