--- a/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
+++ b/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="698.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ib_client.FXMLRekeningManagementController">
+<Pane fx:id="mainPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="698.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ib_client.FXMLRekeningManagementController">
    <children>
       <ListView fx:id="listViewBankAccount" layoutX="31.0" layoutY="25.0" prefHeight="200.0" prefWidth="396.0" />
       <TabPane fx:id="tabPaneBankAccountOptions" layoutX="31.0" layoutY="234.0" prefHeight="267.0" prefWidth="651.0" tabClosingPolicy="UNAVAILABLE">
