--- a/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
+++ b/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
@@ -21,10 +22,16 @@
                         <Label layoutX="21.0" layoutY="130.0" text="naar:" />
                         <ComboBox fx:id="comboBoxInternalTransactionBankAccountTo" layoutX="49.0" layoutY="126.0" prefHeight="25.0" prefWidth="251.0" />
                         <Label layoutX="325.0" layoutY="29.0" text="Bedrag:" />
-                        <TextField fx:id="textFieldInternalTransactionAmountToTransfer" layoutX="374.0" layoutY="25.0" prefHeight="25.0" prefWidth="74.0" />
+                        <TextField fx:id="textFieldInternalTransactionAmountToTransfer" alignment="CENTER_RIGHT" layoutX="374.0" layoutY="25.0" prefHeight="25.0" prefWidth="59.0" promptText="€" />
                         <Label layoutX="326.0" layoutY="62.0" text="Beschrijving:" />
                         <TextArea fx:id="textAreaInternalTransactionDesctiption" layoutX="326.0" layoutY="80.0" prefHeight="116.0" prefWidth="300.0" />
                         <Button fx:id="buttonInternalTransactionTransferMoney" layoutX="326.0" layoutY="199.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="302.0" text="Maak over" />
+                        <Label fx:id="lblInternalKomma" layoutX="438.0" layoutY="30.0" prefHeight="21.0" prefWidth="7.0" text=",">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="textFieldInternalTransactionAmountToTransfer2" layoutX="445.0" layoutY="25.0" prefHeight="25.0" prefWidth="29.0" promptText="00" />
                      </children>
                   </AnchorPane>
             </content>
