--- a/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
+++ b/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
@@ -43,14 +43,20 @@
                         <Button fx:id="buttonExternalTransactionTransferMoney" layoutX="326.0" layoutY="199.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="302.0" text="Maak over" />
                         <TextArea fx:id="textAreaExternalTransactionDesctiption" layoutX="326.0" layoutY="80.0" prefHeight="116.0" prefWidth="300.0" />
                         <Label layoutX="326.0" layoutY="62.0" text="Beschrijving:" />
-                        <TextField fx:id="textFieldExternalTransactionAmountToTransfer" layoutX="374.0" layoutY="25.0" prefHeight="25.0" prefWidth="74.0" />
                         <Label layoutX="325.0" layoutY="29.0" text="Bedrag:" />
                         <Label layoutX="23.0" layoutY="29.0" text="van:" />
                         <ComboBox fx:id="comboBoxExternalTransactionBankAccountFrom" layoutX="49.0" layoutY="25.0" prefHeight="25.0" prefWidth="251.0" />
                         <Label layoutX="21.0" layoutY="130.0" text="naar:" />
-                        <ComboBox fx:id="comboBoxExternalTransactionBankAccountToBankShortName" layoutX="109.0" layoutY="126.0" prefHeight="25.0" prefWidth="68.0" />
-                        <TextField fx:id="textFieldExternalTransactionBankAccountToPrefix" layoutX="49.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" />
-                        <TextField fx:id="textFieldExternalTransactionBankAccountToNumber" layoutX="175.0" layoutY="126.0" prefHeight="25.0" prefWidth="133.0" />
+                        <ComboBox fx:id="comboBoxExternalTransactionBankAccountToBankShortName" layoutX="109.0" layoutY="126.0" prefHeight="25.0" prefWidth="75.0" />
+                        <TextField fx:id="textFieldExternalTransactionBankAccountToPrefix" alignment="CENTER_RIGHT" layoutX="49.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="NL00" />
+                        <TextField fx:id="textFieldExternalTransactionBankAccountToNumber" layoutX="184.0" layoutY="126.0" prefHeight="25.0" prefWidth="124.0" promptText="0000 0000 00" />
+                        <TextField fx:id="textFieldExternalTransactionAmountToTransfer" alignment="CENTER_RIGHT" layoutX="374.0" layoutY="25.0" prefHeight="25.0" prefWidth="59.0" promptText="€" />
+                        <Label fx:id="lblExternalKomma" layoutX="438.0" layoutY="30.0" prefHeight="21.0" prefWidth="7.0" text=",">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="textFieldExternalTransactionAmountToTransfer2" layoutX="445.0" layoutY="25.0" prefHeight="25.0" prefWidth="29.0" promptText="00" />
                      </children></AnchorPane>
             </content>
           </Tab>
