--- a/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
+++ b/IB_Client/src/ib_client/FXMLRekeningManagement.fxml
@@ -49,7 +49,7 @@
                         <Label layoutX="21.0" layoutY="130.0" text="naar:" />
                         <ComboBox fx:id="comboBoxExternalTransactionBankAccountToBankShortName" layoutX="109.0" layoutY="126.0" prefHeight="25.0" prefWidth="75.0" />
                         <TextField fx:id="textFieldExternalTransactionBankAccountToPrefix" alignment="CENTER_RIGHT" layoutX="49.0" layoutY="126.0" prefHeight="25.0" prefWidth="60.0" promptText="NL00" />
-                        <TextField fx:id="textFieldExternalTransactionBankAccountToNumber" layoutX="184.0" layoutY="126.0" prefHeight="25.0" prefWidth="124.0" promptText="0000 0000 00" />
+                        <TextField fx:id="textFieldExternalTransactionBankAccountToNumber" layoutX="184.0" layoutY="126.0" prefHeight="25.0" prefWidth="124.0" promptText="0000000000" />
                         <TextField fx:id="textFieldExternalTransactionAmountToTransfer" alignment="CENTER_RIGHT" layoutX="374.0" layoutY="25.0" prefHeight="25.0" prefWidth="59.0" promptText="€" />
                         <Label fx:id="lblExternalKomma" layoutX="438.0" layoutY="30.0" prefHeight="21.0" prefWidth="7.0" text=",">
                            <font>
@@ -90,7 +90,7 @@
             </Tab>
         </tabs>
       </TabPane>
-      <ComboBox fx:id="comboBoxBankAccountType" layoutX="475.0" layoutY="25.0" prefWidth="150.0" />
-      <Button fx:id="buttonAddBankAccount" layoutX="638.0" layoutY="25.0" mnemonicParsing="false" onAction="#addBankAccount" text="Add" />
+      <Button fx:id="buttonAddBankAccount" layoutX="439.0" layoutY="25.0" mnemonicParsing="false" onAction="#addBankAccount" text="Add" />
+      <Button fx:id="btnLogout" layoutX="628.0" layoutY="25.0" mnemonicParsing="false" onAction="#logout" text="Logout" />
    </children>
 </Pane>
